adjust size of text in footer to stop  overflow on mobile sized screens (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -432,5 +432,5 @@ hr{
   1px -1px 0 #000,
   -1px 1px 0 #000,
   1px 1px 0 #000;
-  font-size: 200%;
+  font-size: 150%;
 }
